--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^20.0.0",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
