--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,20 +2,19 @@ FROM node:18
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-RUN apt-get update && apt-get install -y netcat-openbsd
 COPY . .
-RUN chmod +x /app/start-backend.sh
+RUN npx tsc
 EXPOSE 3000
-CMD ["/app/start-backend.sh"]
+CMD [ "node", "index.js" ]
 
-# CMD [ "node", "index.js" ]
-
-# FROM node
+# FROM node:18
 # WORKDIR /app
-# COPY package*.json /app/
+# COPY package*.json ./
 # RUN npm install
 # RUN apt-get update && apt-get install -y netcat-openbsd
-# COPY . /app
+# COPY . .
 # RUN chmod +x /app/start-backend.sh
 # EXPOSE 3000
-# ENTRYPOINT ["/app/start-backend.sh"]
+# CMD ["/app/start-backend.sh"]
+
+# CMD [ "node", "index.js" ]
