--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -64,6 +64,14 @@ jobs:
           echo "Found backend container ID: $BACKEND_CONTAINER_ID"
           docker logs $BACKEND_CONTAINER_ID
 
+      - name: Check Backend Port
+        run: |
+          curl --fail http://localhost:3000/city || (echo "Backend not accessible on port 3000" && exit 1)
+
+      - name: Check Database Port
+        run: |
+          nc -zv localhost 5432 || (echo "Database not accessible on port 5432" && exit 1)
+
       - name: Change to frontend directory
         run: cd frontend
 
