--- a/compose.yaml
+++ b/compose.yaml
@@ -21,3 +21,12 @@ services:
       PGURI: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database:5432/${POSTGRES_DB}
     depends_on:
       - database
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "5173:5173"
+    environment:
+      - BACKEND_URL=http://backend:3000
+    depends_on:
+      - backend
