--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -80,11 +80,22 @@ jobs:
           echo "Found frontend container ID: $FRONTEND_CONTAINER_ID"
           docker logs $FRONTEND_CONTAINER_ID
 
-      - name: Test backend endpoint city
-        run: |
-          docker compose exec -it backend /bin/bash
-          curl -v http://localhost:3000/city
-
       - name: Run Cypress tests
         run: |
           docker compose exec -it frontend npm run test
+
+      - name: View backend container logs
+        run: |
+          echo "Current Docker containers:"
+          docker ps
+
+          echo "Fetching backend container ID..."
+          BACKEND_CONTAINER_ID=$(docker ps -qf "name=_backend_1" | awk 'NR==1{print $1}')
+
+          if [ -z "$BACKEND_CONTAINER_ID" ]; then
+            echo "Backend container not found"
+            exit 1
+          fi
+
+          echo "Found backend container ID: $BACKEND_CONTAINER_ID"
+          docker logs $BACKEND_CONTAINER_ID
