--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:test": "set NODE_ENV=test&& vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "cypress run"
+    "test": "cross-env NODE_ENV=test cypress run",
+    "posttest": "nyc report --reporter=text-summary --reporter=lcov"
   },
   "dependencies": {
     "dns": "^0.2.2",
@@ -20,17 +22,23 @@
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^20.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
+    "@cypress/code-coverage": "^3.12.17",
+    "@types/cypress__code-coverage": "^3.10.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "cross-env": "^7.0.3",
     "cypress": "^13.6.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "istanbul-lib-coverage": "^3.2.2",
+    "nyc": "^15.1.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-istanbul": "^5.0.0"
   }
 }
