--- a/.github/workflows/cypress.yaml
+++ b/.github/workflows/cypress.yaml
@@ -69,12 +69,12 @@ jobs:
         working-directory: ./frontend
 
       - name: Start the application server
-        run: npm run dev &
+        run: NODE_ENV=test npm run dev &
         working-directory: ./frontend
 
       - name: Wait for Server
         run: sleep 7
 
       - name: Run tests
-        run: npm run test
+        run: NODE_ENV=test npm run test
         working-directory: ./frontend
