--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:test": "set NODE_ENV=test&& vite",
+    "dev:test": "cross-env NODE_ENV=test vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "cross-env NODE_ENV=test cypress run",
-    "posttest": "nyc report --reporter=text-summary --reporter=lcov"
+    "generate-report": "nyc report --reporter=text-summary --reporter=lcov"
   },
   "dependencies": {
     "dns": "^0.2.2",
@@ -23,6 +23,7 @@
     "@badeball/cypress-cucumber-preprocessor": "^20.0.0",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@cypress/code-coverage": "^3.12.17",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/cypress__code-coverage": "^3.10.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
